[package]
name = "spider-pipeline"
version = "0.1.2"
edition = "2024"
authors = ["mzyui <mzyui@proton.me>"]
description = "Pipeline implementations for the spider-lib web scraping framework."
homepage = "https://github.com/spider-lib/spider-lib"
repository = "https://github.com/spider-lib/spider-lib"
license = "MIT"
readme = "README.md"
keywords = ["web-scraping", "pipeline", "crawler", "scraper", "rust"]
categories = ["web-programming", "development-tools", "parsing"]

[dependencies]
async-trait = "0.1"
csv = { version = "1.1" }
dashmap = { version = "6.1.0", features = ["serde"] }
rusqlite = { version = "0.31" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
seahash = "4.1.0"
kanal = "0.1"
spider-util = { version = "0.1.1" }
