[package]
name = "spider-pipeline"
version = "0.1.7"
edition = "2024"
authors = ["mzyui <mzyui@proton.me>"]
description = "Pipeline implementations for the spider-lib web scraping framework."
homepage = "https://github.com/spider-lib/spider-pipeline"
repository = "https://github.com/spider-lib/spider-pipeline"
license = "MIT"
readme = "README.md"
keywords = ["web-scraping", "pipeline", "crawler", "scraper", "rust"]
categories = ["web-programming", "development-tools", "parsing"]

[dependencies]
async-trait = "0.1"
csv = { version = "1.1", optional = true }
dashmap = { version = "6.1.0", features = ["serde"] }
rusqlite = { version = "0.31", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
seahash = "4.1.0"
kanal = "0.1"

spider-util = { version = "0.1.7", path = "../spider-util" }

[features]
default = ["core"]
core = []
pipeline-csv = ["dep:csv"]
pipeline-json = []
pipeline-jsonl = []
pipeline-sqlite = ["dep:rusqlite"]
pipeline-stream-json = []
